--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 		<title>Eat the Burger</title>
+        <!-- Add bootstrap here -->
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/cats.js"></script> <!-- figure out if you need this for burgers -->
+		<script src="/assets/js/app.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
 	</body>
+
+
 </html>
