--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,16 +5,11 @@
     <h1>Eat-Da-Burger!</h1>
     <div class="row">
         <div class="col">
-            <ul>
-                {{#each burgers}}
-                <li>{{this.id}}. {{this.burger_name}}</li>
-                {{/each}}
-            </ul>
         </div>
     </div>
 
-    <form id="create-form" class="button-size">
-  <textarea type="text" id="newBurger" name="name"></textarea>
+    <form id="create-form" class="button-size" action="/api/burgers" method="POST">
+  <input type="text" id="newBurger" name="burger_name"></input>
   <button type="submit">Submit</button>
 </form>
 <p>Enter a burger you want to eat and Click the "Submit" button.</p>
