--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,6 +5,11 @@
     <h1>Eat-Da-Burger!</h1>
     <div class="row">
         <div class="col">
+            <ul>
+                {{#each burgers}}
+                <li>{{this.id}}. {{this.burger_name}}</li>
+                {{/each}}
+            </ul>
         </div>
     </div>
 
